@@ -1,3 +1,6 @@
+- gurpmi
+  o better handle closing dialogs
+
 Version 6.2 - 7 August 2008, Thierry Vignaud
 
 - gurpmi
